@@ -107,6 +107,41 @@ There are a few additional 'options' that are configurable upon defining a new g
 
 TODO: Img for quackering + force jump
 
+## Installing JavaFX on your own system
+
+Delete the *symlink_javafx* symbolic link, then download and unzip the latest version of the JavaFX JDK for Java 11 for your Operating System (taking into account if you have a 64 or 32 bit machine), and transfer the contents of the *lib* folder inside the JDK download into the *lib* folder on your cloned repository. You will also need to change the [*launch.json*](.vscode/launch.json) file to refer to **"./lib"** instead of **./lib/symlink_javafx** in the *"vmArgs"* configuration (note these modifications were tested on Windows 10) as per below;
+
+```diff
+{
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    // NOTE - we turn assertions on to help debugging, although they shouldn't be used in production code
+    "version": "0.2.0",
+    "cwd": "${workspaceRoot}",
+    "configurations": [
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - LoopManiaApplication",
+            "request": "launch",
+-           "vmArgs": "--module-path ./lib/symlink_javafx --add-modules javafx.controls,javafx.fxml -enableassertions",
++           "vmArgs": "--module-path ./lib --add-modules javafx.controls,javafx.fxml -enableassertions",
+            "mainClass": "unsw.loopmania.LoopManiaApplication"
+        }
+    ]
+}
+```
+
+You may also need to copy the contents of the *bin* folder in the unzipped JavaFX JDK download into a *bin* folder under the root directory of your cloned repository (e.g. for Windows).
+
+The following version of the JavaFX JDK is recommended if you choose to run it on your computer, since it is the same version as on the CSE machine:
+
+https://gluonhq.com/products/javafx/
+
+Note that if you deviate from this precise directory structure, you may need to modify the VSCode configuration in [*launch.json*](.vscode/launch.json) to be able to run the game in VSCode.
+
+If these steps worked (and you setup java, and the recommended VSCode extensions properly), you should be able to run the starter code game.
+
 ## Lab 04 - Challenge Exercise - Hotel Refactor 🏨
 
 > For extra practice of test driven refactoring.
